fixed side bar overflowing

--- a/app/static/navbar.css
+++ b/app/static/navbar.css
@@ -79,6 +79,7 @@ nav ul li a:hover {
         height: 100vh;
         background-color: #FF5C00;
         transition: left 0.3s ease-in-out;
+        overflow: hidden;
     }
 
     .nav-toggle {
